# adlmidi

./: .gitignore  CMakeLists.txt  Makefile  README.md  adldata.cc  adldata.hh  adllv2.cc  adltester.cc  audioout.cc  audioout.hh  config.hh  fraction  gen_adldata.cc  jackplay.cc  make.rules  midi_symbols_256.hh  midievt.cc  midievt.hh  midiplay.cc  parseargs.cc  parseargs.hh  qtconsole.cc  seqplay.cc  sync.hh  ui.cc  ui.hh  uiinterface.cc  uiinterface.hh
adlmidi.lv2/: adlmidi.ttl  manifest.ttl
doom2/: genmidi_freedoom.op2
ibk_files/rott/: gmidi.ibk  lee.ibk  leedrums.ibk  mymidi.ibk  percus.ibk
oplsynth/: OPL3.cpp  dosbox_dbopl.cpp  dosbox_dbopl.h  dosbox_opl.cpp  dosbox_opl.h  fmopl.cpp  opl.h  ymf262.cpp
scripts/: instruments.py
